# apigen

./: .gitignore  README.md  pyproject.toml  schema_example.yaml  setup.py
.github/workflows/: ci.yml
apigen/: __init__.py  __main__.py  cli.py  exporters.py  generator.py  models.py  templates.py  utils.py  validators.py
tests/: __init__.py  conftest.py  test_generator.py  test_templates.py  test_validators.py
