# pyproject.toml
# Modern Python packaging configuration — replaces legacy setup.py
# PEP 621 compliant metadata + PEP 660 editable installs

[build-system]
requires = ["setuptools>=68.0", "wheel>=0.41.0"]
build-backend = "setuptools.build_meta"


# ──────────────────────────────────────────────
# Project Metadata (PEP 621)
# ──────────────────────────────────────────────
[project]
name = "apigen"
version = "0.1.0"
description = "A high-performance, AI-free FastAPI project generator that transforms YAML schemas into production-ready Python APIs in O(N) time."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "APIGen Contributors"},
]
maintainers = [
    {name = "APIGen Contributors"},
]
keywords = [
    "fastapi",
    "code-generator",
    "api",
    "sqlalchemy",
    "pydantic",
    "scaffolding",
    "yaml",
    "crud",
    "rest-api",
    "python",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Typing :: Typed",
]

# ── Core Dependencies ──
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
]


# ── Optional Dependency Groups ──
[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1.0",
    "mypy>=1.5",
    "pre-commit>=3.4",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.4",
]


# ── CLI Entry Point ──
# After `pip install apigen`, the command `apigen` becomes globally
# available in the user's terminal and maps to cli_main().
[project.scripts]
apigen = "apigen.cli:cli_main"


# ── Project URLs ──
[project.urls]
Homepage = "https://github.com/your-username/apigen"
Documentation = "https://github.com/your-username/apigen#readme"
Repository = "https://github.com/your-username/apigen"
Issues = "https://github.com/your-username/apigen/issues"
Changelog = "https://github.com/your-username/apigen/blob/main/CHANGELOG.md"


# ──────────────────────────────────────────────
# Setuptools Configuration
# ──────────────────────────────────────────────
[tool.setuptools.packages.find]
include = ["apigen*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
apigen = ["py.typed"]


# ──────────────────────────────────────────────
# Pytest Configuration
# ──────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "-q",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: marks end-to-end integration tests",
]


# ──────────────────────────────────────────────
# Coverage Configuration
# ──────────────────────────────────────────────
[tool.coverage.run]
source = ["apigen"]
branch = true
omit = [
    "tests/*",
    "apigen/__main__.py",
]

[tool.coverage.report]
show_missing = true
precision = 2
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "pass",
    "\\.\\.\\.",
]


# ──────────────────────────────────────────────
# Ruff Linter Configuration
# ──────────────────────────────────────────────
[tool.ruff]
target-version = "py39"
line-length = 100
fix = true

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # bugbear
    "SIM",   # simplify
    "TCH",   # type-checking imports
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["apigen"]


# ──────────────────────────────────────────────
# MyPy Configuration
# ──────────────────────────────────────────────
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
